tests/NormalTests/paczka1/small_fuzzy/89878695.err
Error in line 3: S383 S383 79,5
Error in line 11: dBBoGrX0 S70 7,3
